--- a/portfolio.html
+++ b/portfolio.html
@@ -97,8 +97,8 @@
             
         <ul class="work-list">
             <li class="work-list-item">
-                <div class="work-list-wrapper">
                 <a class="work-list-link" href="" >
+                <div class="work-list-wrapper">
                 <img class="work-list-img" src="./images/portfolio/tehno.jpg" alt="Технокряк" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                 шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -110,8 +110,8 @@
                 </a>
             </li>
             <li class="work-list-item"> 
-                <div class="work-list-wrapper">
                 <a class="work-list-link" href="">
+                    <div class="work-list-wrapper">
                 <img class="work-list-img" src="./images/portfolio/orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
@@ -124,8 +124,8 @@
                 </a>
             </li>
             <li class="work-list-item"> 
+                <a class="work-list-link" href="" >
                 <div class="work-list-wrapper">
-                    <a class="work-list-link" href="" >
                 <img class="work-list-img" src="./images/portfolio/restoraunt.jpg" alt="Ресторан Seafood" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
@@ -138,8 +138,8 @@
                 </a>
             </li>
             <li class="work-list-item">
-                <div class="work-list-wrapper">
                 <a class="work-list-link" href="" >
+                    <div class="work-list-wrapper">
                 <img class="work-list-img" src="./images/portfolio/prime.jpg" alt="Проект Prime" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
@@ -152,8 +152,8 @@
                 </a>
             </li>
             <li class="work-list-item">
-                <div class="work-list-wrapper">
                 <a class="work-list-link" href="" > 
+                    <div class="work-list-wrapper">
                 <img class="work-list-img" src="./images/portfolio/box.jpg" alt="Проект Boxes" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
@@ -166,8 +166,8 @@
                 </a>
             </li>
             <li class="work-list-item"> 
-                <div class="work-list-wrapper">
                 <a class="work-list-link" href="" >
+                    <div class="work-list-wrapper">
                 <img class="work-list-img" src="./images/portfolio/inspirations.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
@@ -180,8 +180,8 @@
                 </a>
             </li>
             <li class="work-list-item">
-                <div class="work-list-wrapper">
-                <a class="work-list-link" href="" > 
+                    <a class="work-list-link" href="" > 
+                    <div class="work-list-wrapper">
                 <img class="work-list-img" src="./images/portfolio/limited.jpg" alt="Издание Limited Edition" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
@@ -194,8 +194,8 @@
                 </a>
             </li>
             <li class="work-list-item"> 
-                <div class="work-list-wrapper">
-                <a class="work-list-link" href="" >
+                    <a class="work-list-link" href="" >
+                    <div class="work-list-wrapper">
                 <img class="work-list-img" src="./images/portfolio/lab.jpg" alt="Проект LAB" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
@@ -208,8 +208,9 @@
                 </a>
             </li>
             <li class="work-list-item"> 
-                <div class="work-list-wrapper">
+                
                 <a class="work-list-link" href="" >
+                    <div class="work-list-wrapper">
                 <img class="work-list-img" src="./images/portfolio/business.jpg" alt="Приложение Growing Business" width="370">
                 <p class="work-list-wrapper-text">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту платформу для цифрового
@@ -311,6 +312,31 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+            <div class="subscription">
+                <p class="subscription-title">Подпишитесь на рассылку</p>
+                <div class="subscription-form">
+                    <form>
+                        <input
+                            type="email"
+                            class="subscription-input"
+                            placeholder="E-mail"
+                        >
+                    </form>
+                    <button
+                        type="button"
+                        class="subscription-button"
+                    >
+                        Подписаться
+                        <svg
+                            class="letter-icon"
+                            width="24"
+                            height="24"
+                        >
+                            <use href="images/icons.svg#icon-letter"></use>
+                        </svg>
+                    </button>
+                </div>
             </div>
         </div>
     </footer>
