--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                     <use href="images/icons.svg#icon-check"></use>
                 </svg>
                 </span>
-                Соглашаюсь с рассылкой и принимаю  <a class="conditions" href=""> Условия договора</a>          
+                Соглашаюсь с рассылкой и принимаю &nbsp <a class="conditions" href="">Условия договора</a>          
                 </label>
         </div>
         <div class="modal-submit-button" >
