--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <!-- Подключение стилей -->
     <link rel="stylesheet" href="./css/styles.css">
+    <link
+        rel="stylesheet"
+        href="./css/main.css"
+    />
 </head>
 
 <body class="page">
