--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link
         rel="stylesheet"
-        href="./css/main.css"
+        href="./css/main.min.css"
     />
 </head>
 
