Добавляет синтаксис scss в папку components

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
         <div class="modal-checkbox">
             <input type="checkbox" name="policy" id="policy" class="modal-check visually-hidden">
             <label for="policy" class="modal-check-text">
-                <span >
+                <span class="modal-check-icon" >
                 <svg
                     class="check-icon"
                     width="16"
