Добавляет синтаксис для всех файлов scss

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
                         class="contact-link"
                     >
                         <svg
-                            class="email-icon"
+                            class="nav-icon email-icon"
                             width="16"
                             height="12"
                         >
@@ -72,7 +72,7 @@
                         class="contact-link"
                     >
                         <svg
-                            class="phone-icon"
+                            class="nav-icon phone-icon"
                             width="10"
                             height="16"
                         >
