--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     <ul class="contacts-nav">
     <li class="contacts item">            
         <a href="mailto:info@devstudio.com" class="contact-link">
-            <svg class="email-icon" width="16" height="12">
+            <svg class="nav-icon email-icon" width="16" height="12">
             <use href="images/icons.svg#icon-email"></use>
             </svg>info@devstudio.com</a>
     </li>
     <li class="contacts item">
         <a href="tel:+380961111111" class="contact-link">
-            <svg class="phone-icon" width="10" height="16">
+            <svg class="nav-icon phone-icon" width="10" height="16">
                 <use href="images/icons.svg#icon-phone"></use>
             </svg>
             +38 096 111 11 11</a>            
