Добавляет начальные изменения по ВЕМ

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
                 href="./index.html"
                 class="nav-logo"
             >
-                <span class="logo-accent">Web</span>Studio</a>
+                <span class="nav-logo__accent">Web</span>Studio</a>
             <ul class="site-nav">
                 <li class="item"><a
                         href="./index.html"
@@ -237,7 +237,7 @@
             <div class="footer-left">
                 <nav class="footer nav">
                     <a href="./index.html" class="nav-logo" >
-                        <span class="logo-accent">Web</span><span class="logo-white">Studio</span></a>
+                        <span class="nav-logo__accent">Web</span><span class="logo-white">Studio</span></a>
                 </nav>
                 <address>
                     <ul class="footer-info">
