Меняет классы для лого и добавляет новый  паршл для лого

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container">        
     <nav class="main-nav">
 <a href="./index.html" class="nav-logo">
-    <span class="nav-logo__accent">Web</span>Studio</a>
+    <span class="nav-logo__basic">Web</span>Studio</a>
 <ul class="site-nav">
     <li class="item"><a href="./index.html" class="link current">Студия</a></li>
     <li class="item"><a href="./portfolio.html" class=link>Портфолио</a></li>
@@ -439,7 +439,7 @@
 <div class="footer-left">    
 <nav class="footer nav">
     <a href="./index.html" class="nav-logo">
-        <span class="nav-logo__accent">Web</span><span class="logo-white">Studio</span></a></nav>
+        <span class="nav-logo__basic">Web</span><span class="nav-logo__accent">Studio</span></a></nav>
 <address>                
 <ul class="footer-info">
     <li class="footer-info-item"><a href="" class="footer-address">г. Киев, пр-т Леси Украинки, 26</a></li>
