Добавляет классы по ВЕМ для хедера

--- a/index.html
+++ b/index.html
@@ -30,27 +30,28 @@
 </head>
 
 <body class="page">
-<!--Шапка-->
+<!--Хедер-->
     <header class="page-header">
     <div class="container">        
     <nav class="main-nav">
 <a href="./index.html" class="nav-logo">
     <span class="nav-logo__basic">Web</span>Studio</a>
 <ul class="site-nav">
-    <li class="item"><a href="./index.html" class="link current">Студия</a></li>
-    <li class="item"><a href="./portfolio.html" class=link>Портфолио</a></li>
-    <li class="item"><a href="" class=link>Контакты</a></li>
-</ul>        
+    <li class="site-nav__item"><a href="./index.html" class="site-nav__link current">Студия</a></li>
+    <li class="site-nav__item"><a href="./portfolio.html" class=site-nav__link>Портфолио</a></li>
+    <li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
+</ul>    
+
     <ul class="contacts-nav">
-    <li class="contacts item">            
-        <a href="mailto:info@devstudio.com" class="contact-link">
-            <svg class="nav-icon email-icon" width="16" height="12">
+    <li class="contacts-nav__item">            
+        <a href="mailto:info@devstudio.com" class="contacts-nav__link">
+            <svg class="contacts-nav__icon email-icon" width="16" height="12">
             <use href="images/icons.svg#icon-email"></use>
             </svg>info@devstudio.com</a>
     </li>
-    <li class="contacts item">
-        <a href="tel:+380961111111" class="contact-link">
-            <svg class="nav-icon phone-icon" width="10" height="16">
+    <li class="contacts-nav__item">
+        <a href="tel:+380961111111" class="contacts-nav__link">
+            <svg class="contacts-nav__icon phone-icon" width="10" height="16">
                 <use href="images/icons.svg#icon-phone"></use>
             </svg>
             +38 096 111 11 11</a>            
