--- a/portfolio.html
+++ b/portfolio.html
@@ -39,40 +39,41 @@
             >
                 <span class="nav-logo__basic">Web</span>Studio</a>
             <ul class="site-nav">
-                <li class="item"><a
+                <li class="site-nav__item"><a
                         href="./index.html"
-                        class="link "
+                        class="site-nav__link"
                     >Студия</a></li>
-                <li class="item"><a
+                <li class="site-nav__item"><a
                         href="./portfolio.html"
-                        class= "link current"
+                        class= "site-nav__link current"
                     >Портфолио</a></li>
-                <li class="item"><a
+                <li class="site-nav__item"><a
                         href=""
-                        class="link"
+                        class="site-nav__link"
                     >Контакты</a></li>
             </ul>
+
             <ul class="contacts-nav">
-                <li class="contacts item">
+                <li class="contacts-nav__item">
                     <a
                         href="mailto:info@devstudio.com"
-                        class="contact-link"
+                        class="contacts-nav__link"
                     >
                         <svg
-                            class="nav-icon email-icon"
+                            class="contacts-nav__icon email-icon"
                             width="16"
                             height="12"
                         >
                             <use href="images/icons.svg#icon-email"></use>
                         </svg>info@devstudio.com</a>
                 </li>
-                <li class="contacts item">
+                <li class="contacts-nav__item">
                     <a
                         href="tel:+380961111111"
-                        class="contact-link"
+                        class="contacts-nav__link"
                     >
                         <svg
-                            class="nav-icon phone-icon"
+                            class="contacts-nav__icon phone-icon"
                             width="10"
                             height="16"
                         >
