--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 
 <main>
     <!--Герой-->    
-    <section class="hero section">
-        <div class="hero container">    
-        <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
+    <section class="hero">
+        <div class="container">    
+        <h1 class="hero__title">Эффективные решения <br> для вашего бизнеса</h1>
         <button 
         type="button" 
-        class="button hero-button" data-modal-open>
+        class="button hero__button" data-modal-open>
         Заказать услугу</button>
         </div>
     </section>
