Добавляет классы по  ВЕМ для секции Преимущества

--- a/index.html
+++ b/index.html
@@ -74,21 +74,22 @@
     </section>
     
     <!--Преимущества-->
-    <section class="features section">
-        <div class="features container">
+    <section class="features">
+        <div class="container">
         <!--Заголовок, который в будущем спрячется, добавляю для семантики-->
-        <h2 class="features-title section-title visually-hidden">Преимущества</h2>
+        <h2 class="section-title visually-hidden">Преимущества</h2>
         <ul class="features-list">
-            <li class="features-list-items">
+            <li class="features-list__items">
                 <div class="features-icon">
                 <svg width="70" height="70">
                     <use href="images/icons.svg#icon-features-01"></use>
                 </svg>
                 </div>
-                <h3 class="features-list-title">Внимание к деталям</h3>
-                <p class="features-list-text"> Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>            
-            <li class="features-list-items">
+                <h3 class="features-list__title">Внимание к деталям</h3>
+                <p class="features-list__text"> Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            </li>   
+
+            <li class="features-list__items">
                 <div class="features-icon">
                     <svg
                         width="70"
@@ -97,10 +98,10 @@
                         <use href="images/icons.svg#icon-features-02"></use>
                     </svg>
                 </div>
-                <h3 class="features-list-title">Пунктуальность</h3>
-                <p class="features-list-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <h3 class="features-list__title">Пунктуальность</h3>
+                <p class="features-list__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>            
-            <li class="features-list-items">
+            <li class="features-list__items">
                 <div class="features-icon">
                     <svg
                         width="70"
@@ -109,10 +110,10 @@
                         <use href="images/icons.svg#icon-features-03"></use>
                     </svg>
                 </div>
-                <h3 class="features-list-title">Планирование</h3>
-                <p class="features-list-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <h3 class="features-list__title">Планирование</h3>
+                <p class="features-list__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
-            <li class="features-list-items">
+            <li class="features-list__items">
                 <div class="features-icon">
                     <svg
                         width="70"
@@ -121,8 +122,8 @@
                         <use href="images/icons.svg#icon-features-04"></use>
                     </svg>
                 </div>
-                <h3 class="features-list-title">Современные технологии</h3>
-                <p class="features-list-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <h3 class="features-list__title">Современные технологии</h3>
+                <p class="features-list__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
         </div>        
