Добавляет классы по ВЕМ для Активити

--- a/index.html
+++ b/index.html
@@ -128,31 +128,31 @@
         </ul>
         </div>        
         </section>
-
-        <!--Чем мы занимаемся-->
-        <section class="activity section">
-        <div class="activity-section container">
-        <h2 class="activity section-title">Чем мы занимаемся</h2>        
-        <ul class="activity-list">
-        <li class="activity-item">
-            <img class="activity-img" src="./images/notebook.jpg" alt="Ноутбук" width="370">
-            <p class="activity-text">Десктопные приложения</p>
+        
+        <!--Секция Activity-->
+        <section class="activity">
+        <div class="container">
+        <h2 class="activity__title section-title">Чем мы занимаемся</h2>        
+        <ul class="activity__list">
+        <li class="activity__item">
+            <img class="activity__img" src="./images/notebook.jpg" alt="Ноутбук" width="370">
+            <p class="activity__text">Десктопные приложения</p>
         </li>
 
-        <li class="activity-item">
-            <img class="activity-img" src="./images/mobilephone.jpg" alt="Телефон" width="370">
-            <p class="activity-text">Мобильные приложения</p>
+        <li class="activity__item">
+            <img class="activity__img" src="./images/mobilephone.jpg" alt="Телефон" width="370">
+            <p class="activity__text">Мобильные приложения</p>
         </li>
 
-        <li class="activity-item">
-            <img class="activity-img" src="./images/tablet.jpg" alt="Планшет" width="370">
-            <p class="activity-text">Дизайнерские решения</p>
+        <li class="activity__item">
+            <img class="activity__img" src="./images/tablet.jpg" alt="Планшет" width="370">
+            <p class="activity__text">Дизайнерские решения</p>
         </li>
         </ul>
         </div>        
     </section>
 
-    <!--Наша команда-->
+        <!--Наша команда-->
     <section class="members section">
         <div class="members container">
         <h2 class="members section-title">Наша команда</h2>
