Добавляет классы по ВЕМ для секции Постоянные клиенты

--- a/index.html
+++ b/index.html
@@ -153,59 +153,56 @@
     </section>
 
         <!--Наша команда-->
-    <section class="members section">
-        <div class="members container">
-        <h2 class="members section-title">Наша команда</h2>
-    <ul class="members-list">
-        <li class="members-item">        
+    <section class="members">
+        <div class="container">
+        <h2 class="members__title section-title">Наша команда</h2>
+    <ul class="members__list">
+        <li class="members__item">        
             <img src="./images/ihor.jpg" alt="Игорь Демьяненко" width="270">
-            <div class="members-box"><h3 class="members-title">Игорь Демьяненко</h3>
-            <p class="members-text">Product Designer</p></div>
+            <div class="members__box">
+                <h3 class="members__name">Игорь Демьяненко</h3>
+            <p class="members__text">Product Designer</p></div>
             <ul class="social">
-                <li class="social-items">
-                    <a class="social-links" href="">
-                    <svg class="social-icons" width="20" height="20">
+                <li class="social__items">
+                    <a class="social__links" href="">
+                    <svg class="social__icons" width="20" height="20">
                         <use href="images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
                 </li>
-                <li class="social-items">
-                    <a class="social-links" href="">
-                    <svg class="social-icons" width="20" height="20">
+                <li class="social__items">
+                    <a class="social__links" href="">
+                    <svg class="social__icons" width="20" height="20">
                         <use href="images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
                 </li>
-                <li class="social-items">
-                    <a class="social-links" href="">
-                    <svg class="social-icons" width="20" height="20">
+                <li class="social__items">
+                    <a class="social__links" href="">
+                    <svg class="social__icons" width="20" height="20">
                     <use href="images/icons.svg#icon-facebook"></use>
                 </svg>
                 </a>
                 </li>
-                <li class="social-items">
-                    <a class="social-links" href="">
-                    <svg class="social-icons" width="20" height="20">
+                <li class="social__items">
+                    <a class="social__links" href="">
+                    <svg class="social__icons" width="20" height="20">
                         <use href="images/icons.svg#icon-linkedin"></use>
                     </svg>
                 </a>
                 </li>
                 </ul>
                     </li>
-
-
-        <li class="members-item">
+        <li class="members__item">
             <img src="./images/olha.jpg" alt="Ольга Репина" width="270">
-            <div class="members-box"><h3 class="members-title">Ольга Репина</h3>
-            <p class="members-text">Frontend Developer</p></div>
+            <div class="members__box">
+                <h3 class="members__name">Ольга Репина</h3>
+            <p class="members__text">Frontend Developer</p></div>
             <ul class="social">
-                <li class="social-items">
-                    <a
-                        class="social-links"
-                        href=""
-                    >
+                <li class="social__items">
+                    <a class="social__links" href="">
                         <svg
-                            class="social-icons"
+                            class="social__icons"
                             width="20"
                             height="20"
                         >
@@ -213,13 +210,10 @@
                         </svg>
                     </a>
                 </li>
-                <li class="social-items">
-                    <a
-                        class="social-links"
-                        href=""
-                    >
+                <li class="social__items">
+                    <a class="social__links" href="">
                         <svg
-                            class="social-icons"
+                            class="social__icons"
                             width="20"
                             height="20"
                         >
@@ -227,13 +221,13 @@
                         </svg>
                     </a>
                 </li>
-                <li class="social-items">
+                <li class="social__items">
                     <a
-                        class="social-links"
+                        class="social__links"
                         href=""
                     >
                         <svg
-                            class="social-icons"
+                            class="social__icons"
                             width="20"
                             height="20"
                         >
@@ -241,13 +235,13 @@
                         </svg>
                     </a>
                 </li>
-                <li class="social-items">
+                <li class="social__items">
                     <a
-                        class="social-links"
+                        class="social__links"
                         href=""
                     >
                         <svg
-                            class="social-icons"
+                            class="social__icons"
                             width="20"
                             height="20"
                         >
@@ -257,18 +251,19 @@
                 </li>
             </ul>
         </li>        
-        <li class="members-item">
+        <li class="members__item">
             <img src="./images/nikolay.jpg" alt="Николай Тарасов" width="270">
-            <div class="members-box"><h3 class="members-title">Николай Тарасов</h3>
-            <p class="members-text">Marketing</p></div>  
+            <div class="members__box"><h3 class="members__name">Николай Тарасов</h3>
+            <p class="members__text">Marketing</p>
+            </div>  
             <ul class="social">
-                <li class="social-items">
+                <li class="social__items">
                     <a
-                        class="social-links"
+                        class="social__links"
                         href=""
                     >
                         <svg
-                            class="social-icons"
+                            class="social__icons"
                             width="20"
                             height="20"
                         >
@@ -276,13 +271,13 @@
                         </svg>
                     </a>
                 </li>
-                <li class="social-items">
+                <li class="social__items">
                     <a
-                        class="social-links"
+                        class="social__links"
                         href=""
                     >
                         <svg
-                            class="social-icons"
+                            class="social__icons"
                             width="20"
                             height="20"
                         >
@@ -290,13 +285,13 @@
                         </svg>
                     </a>
                 </li>
-                <li class="social-items">
+                <li class="social__items">
                     <a
-                        class="social-links"
+                        class="social__links"
                         href=""
                     >
                         <svg
-                            class="social-icons"
+                            class="social__icons"
                             width="20"
                             height="20"
                         >
@@ -304,13 +299,13 @@
                         </svg>
                     </a>
                 </li>
-                <li class="social-items">
+                <li class="social__items">
                     <a
-                        class="social-links"
+                        class="social__links"
                         href=""
                     >
                         <svg
-                            class="social-icons"
+                            class="social__icons"
                             width="20"
                             height="20"
                         >
@@ -320,18 +315,18 @@
                 </li>
             </ul>
         </li>
-        <li class="members-item">
+        <li class="members__item">
             <img src="./images/michael.jpg" alt="Михаил Ермаков" width="270">
-            <div class="members-box"><h3 class="members-title">Михаил Ермаков</h3>
-            <p class="members-text">UI Designer</p></div>
+            <div class="members__box"><h3 class="members__name">Михаил Ермаков</h3>
+            <p class="members__text">UI Designer</p></div>
             <ul class="social">
-                <li class="social-items">
+                <li class="social__items">
                     <a
-                        class="social-links"
+                        class="social__links"
                         href=""
                     >
                         <svg
-                            class="social-icons"
+                            class="social__icons"
                             width="20"
                             height="20"
                         >
@@ -339,13 +334,13 @@
                         </svg>
                     </a>
                 </li>
-                <li class="social-items">
+                <li class="social__items">
                     <a
-                        class="social-links"
+                        class="social__links"
                         href=""
                     >
                         <svg
-                            class="social-icons"
+                            class="social__icons"
                             width="20"
                             height="20"
                         >
@@ -353,13 +348,13 @@
                         </svg>
                     </a>
                 </li>
-                <li class="social-items">
+                <li class="social__items">
                     <a
-                        class="social-links"
+                        class="social__links"
                         href=""
                     >
                         <svg
-                            class="social-icons"
+                            class="social__icons"
                             width="20"
                             height="20"
                         >
@@ -367,13 +362,13 @@
                         </svg>
                     </a>
                 </li>
-                <li class="social-items">
+                <li class="social__items">
                     <a
-                        class="social-links"
+                        class="social__links"
                         href=""
                     >
                         <svg
-                            class="social-icons"
+                            class="social__icons"
                             width="20"
                             height="20"
                         >
@@ -387,12 +382,14 @@
     </div>
     </section>
 
-    <section class="client section">
-    <div class="client container">
-    <h2 class="client section-title">Постоянные клиенты</h2>
-    <ul class="clients-list">
-        <li class="clients-item"><a href="" class="clients-icon">
-            <svg class="clients-svg"
+    <!-- Постоянные клиенты -->
+    <section class="clients">
+    <div class="container">
+    <h2 class="clients__title section-title">Постоянные клиенты</h2>
+    <ul class="clients__list">
+        <li class="clients__item">
+            <a href="" class="clients__icon">
+            <svg class="clients__svg"
             width="106"
             height="60"
         >
@@ -400,34 +397,47 @@
         </svg></a>
     </li>
 
-        <li class="clients-item"><a href="" class="clients-icon"><svg class="clients-svg"
+        <li class="clients__item">
+            <a href="" class="clients__icon">
+                <svg class="clients__svg"
             width="106"
-            height="60"
-        >
+            height="60">
             <use href="images/icons.svg#icon-clients-02"></use>
-        </svg></a></li>
-        <li class="clients-item"><a href="" class="clients-icon"><svg class="clients-svg"
+        </svg>
+        </a>
+        </li>
+        <li class="clients__item">
+            <a href="" class="clients__icon">
+                <svg class="clients__svg"
             width="106"
-            height="60"
-        >
+            height="60">
             <use href="images/icons.svg#icon-clients-03"></use>
-        </svg></a></li>
-        <li class="clients-item"><a href="" class="clients-icon"><svg class="clients-svg"
+        </svg>
+        </a>
+        </li>
+        <li class="clients__item">
+            <a href="" class="clients__icon">
+                <svg class="clients__svg"
             width="106"
-            height="60"
-        >
+            height="60">
             <use href="images/icons.svg#icon-clients-04"></use>
-        </svg></a></li>
-        <li class="clients-item"><a href="" class="clients-icon"><svg class="clients-svg"
+        </svg>
+        </a>
+        </li>
+        <li class="clients__item">
+            <a href="" class="clients__icon">
+                <svg class="clients__svg"
             width="106"
-            height="60"
-        >
+            height="60">
             <use href="images/icons.svg#icon-clients-05"></use>
-        </svg></a></li>
-        <li class="clients-item"><a href="" class="clients-icon"><svg class="clients-svg"
+        </svg>
+        </a>
+        </li>
+        <li class="clients__item">
+            <a href="" class="clients__icon">
+                <svg class="clients__svg"
             width="106"
-            height="60"
-        >
+            height="60">
             <use href="images/icons.svg#icon-clients-06"></use>
         </svg></a></li>
     </ul>
